# Agent-Skill-Forge

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md
.claude-plugin/: plugin.json
.out-of-scope/: mainstream-issue-trackers-only.md  setup-skill-verify-mode.md
docs/: invocation.md
docs/adr/: 0001-explicit-setup-pointer-only-for-hard-dependencies.md
hooks/: checkpoint.py  hooks.json  issue_gate.py
scripts/: delegation.py  finalize-issue.py  install.sh  list-skills.sh  test-checkpoint-hooks.py  test-checkpoint-hooks.sh  test-delegation.py  test-delegation.sh  test-engineering-contracts.sh  test-install-shape.sh  test-issue-completion.py  test-issue-completion.sh
skills/engineering/: README.md
skills/engineering/ask-skills/: SKILL.md
skills/engineering/codebase-design/: SKILL.md
skills/engineering/diagnosing-bugs/: SKILL.md
skills/engineering/domain-modeling/: SKILL.md
skills/engineering/grill-with-docs/: SKILL.md
skills/engineering/implement/: SKILL.md
skills/engineering/improve-codebase-architecture/: SKILL.md
skills/productivity/: README.md
skills/research/: README.md
skills/research/arxiv-doc-builder/: SKILL.md  pyproject.toml
skills/research/arxiv-doc-builder/arxiv_doc_builder/: _version.py  arxiv_id.py  arxiv_metadata.py  convert_latex.py  convert_paper.py  convert_pdf_double_column.py  convert_pdf_extract.py  convert_pdf_simple.py  convert_pdf_split_columns.py  convert_pdf_with_vision.py  fetch_paper.py  pdf_converter_lib.py  pdf_image_lib.py
skills/research/arxiv-doc-builder/references/: output-format.md
skills/research/arxiv-doc-builder/tests/: test_arxiv_id.py  test_arxiv_metadata.py  test_cli_contracts.py  test_convert_pandoc_bounds.py  test_convert_paper_routing.py  test_find_main_tex.py  test_packaging.py  test_pdf_converter_lib.py  test_pdf_image_lib.py  test_version.py  test_version_drift.py
(+60 files in other folders)
